docs: documentando os services