@@ -17,6 +17,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -31,46 +32,46 @@ public class SecurityConfiguration {
     }
 
     @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity httpSecurity) throws Exception{
+    public SecurityFilterChain securityFilterChain(HttpSecurity httpSecurity) throws Exception {
         return httpSecurity
-                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // CORS habilitado
-                .csrf(csrf -> csrf.disable())
+                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Configura CORS explicitamente
+                .csrf(csrf -> csrf.disable()) // Desabilita CSRF (Padrão para API REST Stateless)
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(authorize -> authorize
+                        // 1. Acesso Público (Auth e Docs)
                         .requestMatchers("/auth/**").permitAll()
                         .requestMatchers("/v3/api-docs/**", "/swagger-ui/**", "/swagger-ui.html").permitAll()
                         
-                        // 2. Instrutores (Perfil Público)
+                        // 2. Leitura Pública (Catálogo)
                         .requestMatchers(HttpMethod.GET, "/instructors/**").permitAll()
-
-                        // 3. Cursos e Categorias (Leitura Pública)
                         .requestMatchers(HttpMethod.GET, "/courses/**").permitAll()
                         .requestMatchers(HttpMethod.POST, "/courses/search").permitAll() 
                         .requestMatchers(HttpMethod.GET, "/categories/**").permitAll()
                         
-                        // 4. Gestão de Cursos (Apenas Instrutores)
+                        // 3. Instrutores (Escrita em Cursos)
                         .requestMatchers(HttpMethod.POST, "/courses/**").hasRole("INSTRUCTOR")
                         .requestMatchers(HttpMethod.PUT, "/courses/**").hasRole("INSTRUCTOR")
                         .requestMatchers(HttpMethod.DELETE, "/courses/**").hasRole("INSTRUCTOR")
                         
-                        // 5. Módulos e Aulas (Gestão)
+                        // 4. Módulos e Aulas
                         .requestMatchers(HttpMethod.POST, "/courses/*/modules/**").hasRole("INSTRUCTOR")
                         .requestMatchers(HttpMethod.PUT, "/courses/*/modules/**").hasRole("INSTRUCTOR")
                         .requestMatchers(HttpMethod.DELETE, "/courses/*/modules/**").hasRole("INSTRUCTOR")
 
-                        // 6. Área do Aluno (Matrícula, Progresso, Dashboard)
+                        // 5. Alunos (Matrícula e Certificado)
                         .requestMatchers("/students/**").hasRole("STUDENT")
                         .requestMatchers(HttpMethod.POST, "/enrollments/**").hasRole("STUDENT")
                         .requestMatchers(HttpMethod.GET, "/enrollments/*/certificate").hasRole("STUDENT")
                         
-                        // 7. Fórum e Reviews (Alunos e Instrutores)
+                        // 6. Interações (Autenticados em geral)
                         .requestMatchers("/topics/**").authenticated()
                         .requestMatchers("/courses/*/reviews/**").authenticated()
                         .requestMatchers("/users/**").authenticated()
 
-                        // Qualquer outra coisa precisa de autenticação
+                        // Resto bloqueado
                         .anyRequest().authenticated()
                 )
+                // Configura o tratamento de erro customizado (401 JSON)
                 .exceptionHandling(exception -> exception
                     .authenticationEntryPoint(customAuthenticationEntryPoint) 
                 )
@@ -78,14 +79,14 @@ public class SecurityConfiguration {
                 .build();
     }
 
+    // Configuração de CORS para permitir o Angular
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:4200")); // Frontend Angular
+        configuration.setAllowedOrigins(List.of("http://localhost:4200")); // Origem do Angular
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
-        configuration.setMaxAge(3600L);
         
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
@@ -93,12 +94,12 @@ public class SecurityConfiguration {
     }
 
     @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration authenticationConfiguration) throws Exception{
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration authenticationConfiguration) throws Exception {
         return authenticationConfiguration.getAuthenticationManager();
     }
 
     @Bean
-    public PasswordEncoder passwordEncoder(){
+    public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 }
